--- a/styleShop.css
+++ b/styleShop.css
@@ -71,6 +71,7 @@ select{
   height: 104px;
   margin-top: -16px;
   padding: 0;
+  background-color: white;
 }
 .logo{
   display: inline-block;
@@ -122,6 +123,7 @@ select{
   float: left;
   margin-left: 113px;
   margin-top: 35px;
+  opacity: 0.7;
 }
 #search{
   width: 176px;
